--- a/apps/livros/templates/livros_list.html
+++ b/apps/livros/templates/livros_list.html
@@ -10,7 +10,7 @@
     <div class="col-lg-12 col-md-12 col-sm-12">
         <div class="card">
             <div class="header">
-                <h2><strong>Obras</strong> <small></h2>
+                <h2><strong> LIVROS </strong> <small></h2>
                 <ul class="header-dropdown">
                     <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="zmdi zmdi-more"></i> </a>
                         <ul class="dropdown-menu dropdown-menu-right">
@@ -27,7 +27,7 @@
                     <thead>
                         <tr>
                             <th>Cód.</th>
-                            <th>Livro</th>
+                            <th>LIVROS</th>
                             <th></th>
                         </tr>
                     </thead>
