--- a/apps/livros/templates/livros_list.html
+++ b/apps/livros/templates/livros_list.html
@@ -2,9 +2,6 @@
 
 {% block main %}
 
-<div>
-<a href="{% url 'adicionar_livros' %}" type="button" class="btn btn-success"> ADICIONAR </a>
-</div>
 <!-- Hover Rows -->
 <div class="row clearfix">
     <div class="col-lg-12 col-md-12 col-sm-12">
@@ -14,10 +11,10 @@
                 <ul class="header-dropdown">
                     <li class="dropdown"> <a href="javascript:void(0);" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false"> <i class="zmdi zmdi-more"></i> </a>
                         <ul class="dropdown-menu dropdown-menu-right">
-                            <li><a href="javascript:void(0);">Action</a></li>
-                            <li><a href="javascript:void(0);">Another action</a></li>
+                            <li><a href="{% url 'adicionar_livros' %}">ADICIONAR </a></li>
+                            <!-- <li><a href="javascript:void(0);">Another action</a></li>
                             <li><a href="javascript:void(0);">Something else</a></li>
-                            <li><a href="javascript:void(0);" class="boxs-close">Delete</a></li>
+                            <li><a href="javascript:void(0);" class="boxs-close">Delete</a></li> -->
                         </ul>
                     </li>
                 </ul>
@@ -37,8 +34,14 @@
                             <th scope="row">{{livros.id}}</th>
                             <th>{{livros.nome}}</th>         
                             <th>          
-                                <a href="{% url 'livros_atualizar' livros.id %}"> ATUALIZAR </a>
-                                <a href="{% url 'livros_deletar' livros.id %}"> DELETAR </a>                          
+                                <a href="{% url 'livros_atualizar' livros.id %}"> ATUALIZAR <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-arrow-clockwise" viewBox="0 0 16 16">
+                                    <path fill-rule="evenodd" d="M8 3a5 5 0 1 0 4.546 2.914.5.5 0 0 1 .908-.417A6 6 0 1 1 8 2v1z"/>
+                                    <path d="M8 4.466V.534a.25.25 0 0 1 .41-.192l2.36 1.966c.12.1.12.284 0 .384L8.41 4.658A.25.25 0 0 1 8 4.466z"/>
+                                  </svg></a>
+                                <a href="{% url 'livros_deletar' livros.id %}"> DELETAR <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-trash" viewBox="0 0 16 16">
+                                    <path d="M5.5 5.5A.5.5 0 0 1 6 6v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm2.5 0a.5.5 0 0 1 .5.5v6a.5.5 0 0 1-1 0V6a.5.5 0 0 1 .5-.5zm3 .5a.5.5 0 0 0-1 0v6a.5.5 0 0 0 1 0V6z"/>
+                                    <path fill-rule="evenodd" d="M14.5 3a1 1 0 0 1-1 1H13v9a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V4h-.5a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1H6a1 1 0 0 1 1-1h2a1 1 0 0 1 1 1h3.5a1 1 0 0 1 1 1v1zM4.118 4 4 4.059V13a1 1 0 0 0 1 1h6a1 1 0 0 0 1-1V4.059L11.882 4H4.118zM2.5 3V2h11v1h-11z"/>
+                                  </svg></a>                          
                             </th>
                         </tr> 
                         {% empty %}
