--- a/templates/base.html
+++ b/templates/base.html
@@ -60,7 +60,7 @@
                         <div class="col-lg-3 col-md-6 col-sm-12">
                             <h6>SOBRE</h6>
                             <ul class="list-unstyled">
-                                <li><a href="http://thememakker.com/about/" target="_blank"> Sobre </a></li>
+                                <li><a href="{% url 'sobre' %}" target="_blank"> Sobre </a></li>
                                 <li><a href="mailto:acervoliterarionacional@gmail.com" target="_blank"> Contato ✉</a> </li>
                             </ul>
                         </div>
@@ -71,11 +71,18 @@
         <div class="row clearfix">
             <div class="col-lg-12 col-md-12">
                 <div class="social">
-                    <a class="icon" href="https://www.facebook.com/thememakkerteam" target="_blank"><i class="zmdi zmdi-facebook"></i></a>
-                    <a class="icon" href="https://www.behance.net/thememakker" target="_blank"><i class="zmdi zmdi-behance"></i></a>
-                    <a class="icon" href="javascript:void(0);"><i class="zmdi zmdi-twitter"></i></a>
-                    <a class="icon" href="javascript:void(0);"><i class="zmdi zmdi-linkedin"></i></a>                    
-                    <p>Coded by WrapTheme<br> Designed by <a href="http://thememakker.com/" target="_blank">thememakker.com</a></p>
+                    <a class="icon" href="https://github.com/AngelaGarces/acervonacional.git" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
+                        <path d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z"/>
+                      </svg></a>
+                    <a class="icon" href="mailto:acervoliterarionacional@gmail.com" target="_blank"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                        <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V4Zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1H2Zm13 2.383-4.708 2.825L15 11.105V5.383Zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741ZM1 11.105l4.708-2.897L1 5.383v5.722Z"/>
+                      </svg></a>
+                    <a class="icon" href="{% url 'home' %}"><svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-house" viewBox="0 0 16 16">
+                        <path fill-rule="evenodd" d="M2 13.5V7h1v6.5a.5.5 0 0 0 .5.5h9a.5.5 0 0 0 .5-.5V7h1v6.5a1.5 1.5 0 0 1-1.5 1.5h-9A1.5 1.5 0 0 1 2 13.5zm11-11V6l-2-2V2.5a.5.5 0 0 1 .5-.5h1a.5.5 0 0 1 .5.5z"/>
+                        <path fill-rule="evenodd" d="M7.293 1.5a1 1 0 0 1 1.414 0l6.647 6.646a.5.5 0 0 1-.708.708L8 2.207 1.354 8.854a.5.5 0 1 1-.708-.708L7.293 1.5z"/>
+                      </svg></a>
+                    <!-- <a class="icon" href="javascript:void(0);"><i class="zmdi zmdi-linkedin"></i></a>                     -->
+                    <p>2021 &copy </p>
                 </div>
             </div>
         </div>
@@ -95,7 +102,7 @@
         <li><a href="javascript:void(0);" class="fullscreen" data-provide="fullscreen"><i class="zmdi zmdi-fullscreen"></i></a></li>
         <li class="power">
             <a href="javascript:void(0);" class="js-right-sidebar"><i class="zmdi zmdi-settings zmdi-hc-spin"></i></a>            
-            <a href="sign-in.html" class="mega-menu"><i class="zmdi zmdi-power"></i></a>
+            <!-- <a href="sign-in.html" class="mega-menu"><i class="zmdi zmdi-power"></i></a> -->
         </li>
     </ul>    
 </aside>
@@ -103,14 +110,13 @@
 <aside class="right_menu">
     <div id="rightsidebar" class="right-sidebar">
         <ul class="nav nav-tabs">
-            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#setting">Setting</a></li>        
-            <li class="nav-item"><a class="nav-link" data-toggle="tab" href="#activity">Activity</a></li>
+            <li class="nav-item"><a class="nav-link active" data-toggle="tab" href="#setting">Configurações</a></li>        
         </ul>
         <div class="tab-content slim_scroll">
             <div class="tab-pane slideRight active" id="setting">
                 <div class="card">
                     <div class="header">
-                        <h2><strong>Colors</strong> Skins</h2>
+                        <h2><strong>CORES</strong></h2>
                     </div>
                     <div class="body">
                         <ul class="choose-skin list-unstyled m-b-0">
@@ -140,44 +146,12 @@
                 </div>                
                 <div class="card">
                     <div class="header">
-                        <h2><strong>General</strong> Settings</h2>
-                    </div>
-                    <div class="body">
-                        <ul class="setting-list list-unstyled m-b-0">
-                            <li>
-                                <div class="checkbox">
-                                    <input id="checkbox1" type="checkbox">
-                                    <label for="checkbox1">Report Panel Usage</label>
-                                </div>
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-                <div class="card">
-                    <div class="header">
-                        <h2><strong>Left</strong> Menu</h2>
+                        <h2><strong>Menu</strong> usuário </h2>
                     </div>
                     <div class="body theme-light-dark">
                         <button class="t-dark btn btn-primary btn-round btn-block">Dark</button>
                     </div>
                 </div>               
-            </div>
-            <div class="tab-pane slideLeft" id="activity">
-                <div class="card activities">
-                    <div class="header">
-                        <h2><strong>Recent</strong> Activity Feed</h2>
-                    </div>
-                    <div class="body">
-                        <div class="streamline b-accent">
-                            <div class="sl-item">
-                                <div class="sl-content">
-                                    <div class="text-muted">Just now</div>
-                                    <p>Finished task <a href="" class="text-info">#features 4</a>.</p>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-                </div>
             </div>
         </div>
     </div>
@@ -190,9 +164,9 @@
                             <!-- <a href="profile.html"><img src="assets/images/profile_av.jpg" alt="User"></a> -->
                         </div>
 
-                        <!-- <div class="detail">
-                            <h6>Nome do usuário</h6>                        
-                        </div> -->
+                         <div class="detail">
+                            <h6>Seja Bem-Vindo(a)!!!</h6>                        
+                        </div> 
 
                     </div>
                 </li>
@@ -205,14 +179,14 @@
                         <li><a href="{% url 'livros_listar' %}"> LIVROS </a></li>
                     </ul>
                 </li> 
-                <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-apps"></i><span> Categorias </span> <span class="badge badge-success float-right"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
+               <!--  <li> <a href="javascript:void(0);" class="menu-toggle"><i class="zmdi zmdi-apps"></i><span> Categorias </span> <span class="badge badge-success float-right"> <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-card-checklist" viewBox="0 0 16 16">
                     <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5h13zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2h-13z"/>
                     <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0zM7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5zm-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0z"/>
                   </svg> </span></a>
                     <ul class="ml-menu">
                         <li><a href="{% url 'livros_listar' %}"> LIVROS </a></li>
                     </ul>
-                </li>   
+                </li>  -->  
             </ul>
         </div>
     </div>
@@ -241,7 +215,17 @@
             </div>
         </div>
 
-    
+      <!-- Libras -->
+      <div vw class="enabled">
+        <div vw-access-button class="active"></div>
+        <div vw-plugin-wrapper>
+          <div class="vw-plugin-top-wrapper"></div>
+        </div>
+      </div>
+      <script src="https://vlibras.gov.br/app/vlibras-plugin.js"></script>
+      <script>
+        new window.VLibras.Widget('https://vlibras.gov.br/app');
+      </script>
 
 
         {% block main %} {% endblock %}
