--- a/apps/home/templates/sobre.html
+++ b/apps/home/templates/sobre.html
@@ -9,10 +9,10 @@
       <div class="col-sm-12  my-3">
         <h2 id="topo"> SOBRE O PROJETO </h2>
         <p>
-            O Seguinte projeto, tem como principal intuito apresentar Obras Literárias Nacionais, contribuindo para a divulgação de autores e suas criações afim de apreciar a literatura presente no Brasil
+            O Seguinte projeto, tem como principal intuito apresentar Obras Literárias Nacionais, contribuindo para a divulgação de autores e suas criações a fim de apreciar a literatura presente no Brasil.
         </p>
 
-        <p>DESENVOLVIDO POR ALUNOS DO CURSO TÉCNICO EM INFORMÁTICA-III</p>
+        <p>DESENVOLVIDO POR ALUNOS DO CURSO TÉCNICO EM INFORMÁTICA-III. 💻</p>
        
         <p> Nessa disciplina - Linguagem e Desenvolvimento de Aplicações Web - nós alunos(as) do Instituto Federal de Educação, Ciência e Tecnologia do Maranhão -IFMA (Campus - Bacabal/MA), fizemos uso do framework Django. Além da Linguagem Python, utilizamos o Boostrap, HTML e CSS.</p>
 
@@ -21,13 +21,12 @@
           <ul>
               <li>Ana Clara Ferreira Lima,</li>
               <li>Arthur Vasconcelos Oliveira,</li>
-              <li>Vinícius Gabriel Nunes Sobrino,</li>
+              <li>Vinícius Gabriel Nunes Sobrinho,</li>
               <li>Emanuella da Silva Pestana,</li>
               <li>Elâyne Silva de Araújo,</li>
               <li>Angela Maria de Sousa Garcês,</li>
               <li>Alessandro Christian Lira Marcelino.</li>
             </ul>
-
 
 
 {% endblock %}
